--- a/Clean-Reader/Template/View.xaml
+++ b/Clean-Reader/Template/View.xaml
@@ -19,11 +19,43 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListViewItem">
-                    <ListViewItemPresenter x:Name="Root" CheckBrush="{ThemeResource ListViewItemCheckBrush}" ContentMargin="{TemplateBinding Padding}" CheckBoxBrush="{ThemeResource ListViewItemCheckBoxBrush}" ContentTransitions="{TemplateBinding ContentTransitions}" CheckMode="{ThemeResource ListViewItemCheckMode}" DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}" DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}" DragBackground="{ThemeResource ListViewItemDragBackground}" DragForeground="{ThemeResource ListViewItemDragForeground}" FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}" FocusVisualMargin="{TemplateBinding FocusVisualMargin}" FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Control.IsTemplateFocusTarget="True" PressedBackground="Transparent" PlaceholderBackground="{ThemeResource ListViewItemPlaceholderBackground}" PointerOverForeground="{ThemeResource ImportantTextColor}" PointerOverBackground="Transparent" RevealBorderThickness="1" ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}" RevealBorderBrush="{ThemeResource ListViewItemRevealBorderBrush}" RevealBackground="{ThemeResource ListViewItemRevealBackground}" SelectedForeground="{ThemeResource ImportantTextColor}" SelectionCheckMarkVisualEnabled="{ThemeResource ListViewItemSelectionCheckMarkVisualEnabled}" SelectedBackground="Transparent" SelectedPressedBackground="Transparent" SelectedPointerOverBackground="Transparent" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}">
+                    <ListViewItemPresenter x:Name="Root" CornerRadius="5"
+                                           CheckBrush="{ThemeResource ListViewItemCheckBrush}" 
+                                           ContentMargin="{TemplateBinding Padding}" 
+                                           CheckBoxBrush="{ThemeResource ListViewItemCheckBoxBrush}" 
+                                           ContentTransitions="{TemplateBinding ContentTransitions}" 
+                                           CheckMode="{ThemeResource ListViewItemCheckMode}" 
+                                           DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}" 
+                                           DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}" 
+                                           DragBackground="{ThemeResource ListViewItemDragBackground}" 
+                                           DragForeground="{ThemeResource ListViewItemDragForeground}" 
+                                           FocusBorderBrush="{ThemeResource ListViewItemFocusBorderBrush}" 
+                                           FocusVisualMargin="{TemplateBinding FocusVisualMargin}" 
+                                           FocusSecondaryBorderBrush="{ThemeResource ListViewItemFocusSecondaryBorderBrush}" 
+                                           HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                           Control.IsTemplateFocusTarget="True" 
+                                           PressedBackground="{ThemeResource PrimaryColorOpacity}"
+                                           PlaceholderBackground="{ThemeResource ListViewItemPlaceholderBackground}" 
+                                           PointerOverForeground="{ThemeResource PrimaryColorOver}" 
+                                           PointerOverBackground="{ThemeResource PrimaryColorOpacity}" 
+                                           RevealBorderThickness="0" 
+                                           ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}" 
+                                           RevealBorderBrush="{ThemeResource ListViewItemRevealBorderBrush}" 
+                                           RevealBackground="Transparent" 
+                                           SelectedForeground="White" 
+                                           SelectionCheckMarkVisualEnabled="{ThemeResource ListViewItemSelectionCheckMarkVisualEnabled}" 
+                                           SelectedBackground="{ThemeResource PrimaryColorDown}" 
+                                           SelectedPressedBackground="{ThemeResource PrimaryColor}" 
+                                           SelectedPointerOverBackground="{ThemeResource PrimaryColor}" 
+                                           VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal"/>
-                                <VisualState x:Name="Selected"/>
+                                <VisualState x:Name="Selected">
+                                    <VisualState.Setters>
+                                        <Setter Target="Root.FontWeight" Value="Bold" />
+                                    </VisualState.Setters>
+                                </VisualState>
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
                                         <Setter Target="Root.(RevealBrush.State)" Value="PointerOver"/>
@@ -34,12 +66,14 @@
                                     <VisualState.Setters>
                                         <Setter Target="Root.(RevealBrush.State)" Value="PointerOver"/>
                                         <Setter Target="Root.RevealBorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPointerOver}"/>
+                                        <Setter Target="Root.FontWeight" Value="Bold" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="PointerOverPressed">
                                     <VisualState.Setters>
                                         <Setter Target="Root.(RevealBrush.State)" Value="Pressed"/>
                                         <Setter Target="Root.RevealBorderBrush" Value="{ThemeResource ListViewItemRevealBorderBrushPressed}"/>
+                                        <Setter Target="Root.FontWeight" Value="Bold" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
